--- a/hyprland/config/hyprpaper.conf
+++ b/hyprland/config/hyprpaper.conf
@@ -1,6 +1,7 @@
 preload = ~/osrael/hyprland/wallpapers/Tokyo_Pink.png
+preload = ~/osrael/hyprland/wallpapers/Astronaut3.png
 
-wallpaper =, ~/osrael/hyprland/wallpapers/Tokyo_Pink.png
+wallpaper =, ~/osrael/hyprland/wallpapers/Astronaut3.png
 
 splash=true
 ipc=off
