--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -224,6 +224,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, B, exec, $browser --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
