--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -42,6 +42,7 @@ $browser = brave
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
 exec-once = hyprpaper
+exec-once = hypridle
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -225,6 +226,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, B, exec, $browser --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMode SHIFT, L, exec, systemctl suspend
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
