--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -306,3 +306,7 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+
+env = HYPRCURSOR_THEME,Nordzy
+env = HYPRCURSOR_SIZE,24
