--- a/hyprland/config/sources/monitors.conf
+++ b/hyprland/config/sources/monitors.conf
@@ -1,3 +1,3 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=,preferred,auto,auto
-monitor=HDMI-A-1,1280x1024@60.00,auto-center-left,auto
+monitor=HDMI-A-1,preferred,auto-center-left,auto
