--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -13,10 +13,10 @@ source = ~/.config/hypr/sources/bindings.conf
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 # Set programs that you use
-$terminal = ghostty -e /usr/bin/zsh
+$terminal = uwsm app -- ghostty -e /usr/bin/zsh
 $fileManager = dolphin
 $menu = wofi --show drun
-$browser = brave
+$browser = uwsm app -- brave
 
 ###################
 ### KEYBINDINGS ###
