--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -15,7 +15,7 @@ source = ~/.config/hypr/sources/bindings.conf
 # Set programs that you use
 $terminal = uwsm app -- ghostty -e /usr/bin/zsh
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = uwsm app -- walker
 $browser = uwsm app -- brave
 
 ###################
