--- a/hyprland/config/hyprpaper.conf
+++ b/hyprland/config/hyprpaper.conf
@@ -1,7 +1,8 @@
 preload = ~/osrael/hyprland/wallpapers/Tokyo_Pink.png
 preload = ~/osrael/hyprland/wallpapers/Astronaut3.png
+preload = ~/osrael/hyprland/wallpapers/AstronautPink.png
 
-wallpaper =, ~/osrael/hyprland/wallpapers/Astronaut3.png
+wallpaper =, ~/osrael/hyprland/wallpapers/AstronautPink.png
 
 splash=true
 ipc=off
