--- a/hyprland/config/sources/input.conf
+++ b/hyprland/config/sources/input.conf
@@ -8,10 +8,11 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.4 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
+        scroll_factor = 0.4
     }
 }
 
