--- a/hyprland/config/sources/monitors.conf
+++ b/hyprland/config/sources/monitors.conf
@@ -1,3 +1,3 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=,preferred,auto,1.25
 monitor=HDMI-A-1,preferred,auto-center-left,auto
