--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -50,3 +50,6 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+xwayland {
+  force_zero_scaling = true  # stops compositor scaling entirely
+}
