--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -14,9 +14,10 @@ source = ~/.config/hypr/sources/bindings.conf
 # See https://wiki.hypr.land/Configuring/Keywords/
 # Set programs that you use
 $terminal = uwsm app -- ghostty -e /usr/bin/zsh
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = uwsm app -- walker
 $browser = uwsm app -- brave
+$webapp = $browser --app
 
 ###################
 ### KEYBINDINGS ###
@@ -36,6 +37,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, G, exec, $webapp="https://chatgpt.com"
+bind = $mainMod, C, exec, $webapp="https://web.whatsapp.com"
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
