--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -16,7 +16,7 @@ source = ~/.config/hypr/sources/bindings.conf
 $terminal = uwsm app -- ghostty -e /usr/bin/zsh
 $fileManager = nautilus
 $menu = uwsm app -- walker
-$browser = uwsm app -- brave
+$browser = uwsm app -- brave --enable-features=UseOzonePlatform --ozone-platform=wayland
 $webapp = $browser --app
 
 ###################
@@ -27,7 +27,7 @@ $webapp = $browser --app
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, B, exec, $browser --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind = $mainMod, B, exec, $browser
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMode SHIFT, L, exec, systemctl suspend
 bind = $mainMod, Q, killactive,
