--- a/waybar/config/config.jsonc
+++ b/waybar/config/config.jsonc
@@ -79,7 +79,7 @@
     "memory": {
         "interval": 3,
         "format": "{}% ",
-        "on-click": "foot --app-id htop htop",
+        "on-click": "ghostty -e btop",
         "tooltip-format": "Used: {used:0.1f}G/{total:0.1f}G. Swap: {swapUsed:0.1f}G/{swapTotal:0.1f}G",
         "states": {
             "critical": 80
