--- a/hyprland/config/sources/autostart.conf
+++ b/hyprland/config/sources/autostart.conf
@@ -1,8 +1,8 @@
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar
-exec-once = hyprpaper
-exec-once = hypridle
-exec-once = walker --gapplication-service
+exec-once =uwsm app -- waybar
+exec-once =uwsm app -- hyprpaper
+exec-once =uwsm app -- hypridle
+exec-once =uwsm app -- walker --gapplication-service
 
