enable brave swipe

--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -16,7 +16,7 @@ source = ~/.config/hypr/sources/bindings.conf
 $terminal = uwsm app -- ghostty -e /usr/bin/zsh
 $fileManager = nautilus
 $menu = uwsm app -- walker
-$browser = uwsm app -- brave --enable-features=UseOzonePlatform --ozone-platform=wayland
+$browser = uwsm app -- brave --enable-features=TouchpadOverscrollHistoryNavigation,UseOzonePlatform --ozone-platform=wayland
 $webapp = $browser --app
 
 ###################
