more hyprpaper config

--- a/hyprland/config/hyprpaper.conf
+++ b/hyprland/config/hyprpaper.conf
@@ -3,8 +3,9 @@ preload = ~/osrael/hyprland/wallpapers/Astronaut3.png
 preload = ~/osrael/hyprland/wallpapers/Astronaut2.png
 preload = ~/osrael/hyprland/wallpapers/AstronautPink.png
 preload = ~/osrael/hyprland/wallpapers/Astronaut1.png
+preload = ~/osrael/hyprland/wallpapers/cat.png
 
-wallpaper =, ~/osrael/hyprland/wallpapers/Astronaut1.png
+wallpaper =, ~/osrael/hyprland/wallpapers/cat.png
 
-splash=true
-ipc=off
+splash=false
+ipc=on
