--- a/ghostty/config/config
+++ b/ghostty/config/config
@@ -42,3 +42,5 @@
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
 background-opacity = 0.9
+theme = astronaut-dusk
+background-blur = 10
