add grimblast for screenshot

--- a/hyprland/config/hyprland.conf
+++ b/hyprland/config/hyprland.conf
@@ -39,6 +39,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, G, exec, $webapp="https://chatgpt.com"
 bind = $mainMod, C, exec, $webapp="https://web.whatsapp.com"
+bind = , PRINT, exec, grimblast --notify copy output
+bind = $mainMod SHIFT, S, exec, grimblast --notify copy area
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
